--- a/chapter5.tex
+++ b/chapter5.tex
@@ -169,3 +169,21 @@ h_{np}&=\sum m\left(\omega_{nq} z_q z_p -\omega_{pq} z_qz_n\right)\\
 \end{align}
 $$\blacklozenge$$
 \newpage
+
+
+\section{p181 and p182 - Clarification Figures 13., 14. and 15.}
+\begin{tcolorbox}
+There are several ways to show the homeomorphism of the configuration space of a rigid body with fixed point.
+\end{tcolorbox}
+\begin{figure}[H]
+    \centering
+    \subfloat[]{\input{D:/MathLatex/images/fig_p181_13.tex}}
+	\
+    \subfloat[]{\input{D:/MathLatex/images/fig_p182_14.tex}}
+    \qquad
+    \subfloat[]{\input{D:/MathLatex/images/fig_p182_15.tex}}
+\caption{Homeomorphism of the configuration space of a rigid body with fixed point.}
+\label{fig:fig_p181}
+\end{figure}
+$$\blacklozenge$$
+\newpage
