--- a/chapter5.tex
+++ b/chapter5.tex
@@ -168,7 +168,6 @@ h_{np}&=\sum m\left(\omega_{nq} z_q z_p -\omega_{pq} z_qz_n\right)\\
 &=J_{npqr}\omega_{rq}
 \end{align}
 $$\blacklozenge$$
-$$J^{-1}={\begin{pmatrix}{\dfrac {x}{r}}&{\dfrac {y}{r}}&{\dfrac {z}{r}}\\\\{\dfrac {xz}{r^{2}{\sqrt {x^{2}+y^{2}}}}}&{\dfrac {yz}{r^{2}{\sqrt {x^{2}+y^{2}}}}}&{\dfrac {-(x^{2}+y^{2})}{r^{2}{\sqrt {x^{2}+y^{2}}}}}\\\\{\dfrac {-y}{x^{2}+y^{2}}}&{\dfrac {x}{x^{2}+y^{2}}}&0\end{pmatrix}}$$
 \newpage
 
 
@@ -289,7 +288,7 @@ $$\blacklozenge$$
 
 \section{p181 and p182 - Clarification Figures 13., 14. and 15.}
 \begin{tcolorbox}
-There are several ways to show the homeomorphism of the configuration space of a rigid body with fixed point.
+There are several ways to get a homeomorphism of the configuration space of a rigid body with fixed point.
 \end{tcolorbox}
 \begin{figure}[H]
     \centering
@@ -301,8 +300,8 @@ There are several ways to show the homeomorphism of the configuration space of a
 \caption{Homeomorphism of the configuration space of a rigid body with fixed point.}
 \label{fig:fig_p181}
 \end{figure}
-Consider figure $5.2 (a)$. We can stretch like an accordion the cuboid along the $\phi$ axis and bent it so that the planes $\phi=0$ and $\phi=2\pi$ join. We get $(b)$,  a torus with square sections. The dimension $\phi$ is dealt with as a point $P\left( \theta \phi \psi \right)$ in the configuration space  returns to the same point when varying $\phi$ to $\phi+2k\pi$.\\
-We can apply the same procedure of stretching and bending for the $psi$ dimension so that the planes $\Psi=0$ and $\Psi=2\pi$ join.
+Consider figure $5.2 (a)$. We can stretch like an accordion the cuboid along the $\phi$ axis and bent it so that the planes $\phi=0$ and $\phi=2\pi$ join. We get $(b)$,  a torus with square sections. The dimension $\phi$ is dealt with as a point $P\left( \theta, \phi, \psi \right)$ in the configuration space  returns to the same point when varying $\phi$ to $\phi+2k\pi$.\\
+We can apply the same procedure of stretching and bending for the $\psi$ dimension so that the planes $\Psi=0$ and $\Psi=2\pi$ join.
 We get $(c)$,  a torus-like object.\\
 The only dimension left is $\theta$ which our multi-dimensional crippled mind can't find a way to reshape this pseudo-torus so that when varying $\theta$ we can come back to the same point as started.
 $$\blacklozenge$$
