--- a/chapter5.tex
+++ b/chapter5.tex
@@ -171,6 +171,70 @@ $$\blacklozenge$$
 \newpage
 
 
+\section{p166 - Ecercise}
+\begin{tcolorbox}
+Deduce immediately from $\mathbf{5.420.}$ that the Coriolis force is perpendicular to the velocity.
+\end{tcolorbox}
+\begin{align}
+G^{'}_s &= 2m\omega^{'}_{sm}(S^{'},S)v^{'}_m(S^{'})\\
+\times v^{'}_s(S^{'})\quad : \spatie G^{'}_s v^{'}_s(S^{'})&=m\left(\omega^{'}_{sm}(S^{'},S)v^{'}_m(S^{'})v^{'}_s(S^{'})+\omega^{'}_{ms}(S^{'},S)v^{'}_m(S^{'})v^{'}_s(S^{'})\right)\\
+&=0\quad\text{as }\omega^{'}_{ms}\text{ is skew-symmetric}
+\end{align}
+$$\blacklozenge$$
+\newpage
+
+\section{p166 - Ecercise}
+\begin{tcolorbox}
+Show that if $N=3$ and $\dot{\omega}^{'}_r(S^{'},S) =0$, then the centrifugal force may be written 
+$$\mathbf{5.422.}\spatie C^{'}_s = m\omega^{'}_{n}(S^{'},S)\omega^{'}_{n}(S^{'},S)z^{'}_s-m\omega^{'}_{n}(S^{'},S)z^{'}_n\omega^{'}_{s}(S^{'},S)$$
+Deduce that $ C^{'}_s$ is coplanar with the vectors $\omega^{'}_{s}(S^{'},S)$ and $z^{'}_n$ and perpendicular to the former.
+\end{tcolorbox}
+By $\mathbf{5.420.}$ with $\dot{\omega}^{'}_r(S^{'},S) =0$ and using $\mathbf{5.316.} \quad ( \omega^{'}_{rs}=\epsilon_{rsn}\omega^{'}_n)$
+\begin{align}
+C^{'}_s &= m\omega^{'}_{sm}(S^{'},S)\omega^{'}_{nm}(S^{'},S)z^{'}_n\\
+&= m\epsilon_{smk}\omega^{'}_k(S^{'},S)\epsilon_{nmp}\omega^{'}_p(S^{'},S)z^{'}_n\\
+&= m\epsilon_{msk}\epsilon_{mnp}\omega^{'}_k(S^{'},S)\omega^{'}_p(S^{'},S)z^{'}_n\\
+&= m\left(\delta_{sn}\delta_{kp} -\delta_{sp}\delta_{kn} \right)\omega^{'}_k(S^{'},S)\omega^{'}_p(S^{'},S)z^{'}_n\\
+&= m\delta_{sn}\delta_{kp}\omega^{'}_k(S^{'},S)\omega^{'}_p(S^{'},S)z^{'}_n -m\delta_{sp}\delta_{kn} \omega^{'}_k(S^{'},S)\omega^{'}_p(S^{'},S)z^{'}_n\\
+&= m\omega^{'}_p(S^{'},S)\omega^{'}_p(S^{'},S)z^{'}_s - m\omega^{'}_n(S^{'},S)\omega^{'}_s(S^{'},S)z^{'}_n
+\end{align}
+To deduce that $ C^{'}_s$ is coplanar with the vectors $\omega^{'}_{s}(S^{'},S)$ and $z^{'}_n$ we calculate the mixed triple product
+\begin{align}
+P &= \epsilon_{spr}C^{'}_s \omega^{'}_p(S^{'},S)z^{'}_r\\
+&= m\underbrace{\epsilon_{spr} \omega^{'}_n(S^{'},S)\omega^{'}_n(S^{'},S)z^{'}_s \omega^{'}_p(S^{'},S)z^{'}_r}_{=0} -\underbrace{ m\epsilon_{spr}\omega^{'}_n(S^{'},S)\omega^{'}_s(S^{'},S)z^{'}_n \omega^{'}_p(S^{'},S)z^{'}_r}_{=0}\\
+=0
+\end{align}
+Both terms vanish: the first by the presence of the terms $\epsilon_{spr}z^{'}_s z^{'}_r$ which cancel each other and for the second by the terms $\epsilon_{spr}\omega^{'}_s(S^{'},S) \omega^{'}_p(S^{'},S)$. As $P=0$, the three vectors are coplanar.\\
+We now calculate the inner product $C^{'}_s\omega^{'}_s(S^{'},S)$
+\begin{align}
+P&= m\omega^{'}_n(S^{'},S)\omega^{'}_n(S^{'},S)z^{'}_s\omega^{'}_s(S^{'},S) - \underbrace{m\omega^{'}_n(S^{'},S)\omega^{'}_s(S^{'},S)z^{'}_n\omega^{'}_s(S^{'},S)}_{\Leftrightarrow \  m\omega^{'}_n(S^{'},S)\omega^{'}_n(S^{'},S)z^{'}_s\omega^{'}_s(S^{'},S)}\\
+&=0
+\end{align}
+$$\blacklozenge$$
+\newpage
+
+
+\section{p181 and p182 - Clarification Figures 13., 14. and 15.}
+\begin{tcolorbox}
+There are several ways to get a homeomorphism of the configuration space of a rigid body with fixed point.
+\end{tcolorbox}
+\begin{figure}[H]
+    \centering
+    \subfloat[]{\input{D:/MathLatex/images/fig_p181_13.tex}}
+	\
+    \subfloat[]{\input{D:/MathLatex/images/fig_p182_14.tex}}
+    \qquad
+    \subfloat[]{\input{D:/MathLatex/images/fig_p182_15.tex}}
+\caption{Homeomorphism of the configuration space of a rigid body with fixed point.}
+\label{fig:fig_p181}
+\end{figure}
+Consider figure $5.2 (a)$. We can stretch like an accordion the cuboid along the $\phi$ axis and bent it so that the planes $\phi=0$ and $\phi=2\pi$ join. We get $(b)$,  a torus with square sections. The dimension $\phi$ is dealt with as a point $P\left( \theta, \phi, \psi \right)$ in the configuration space  returns to the same point when varying $\phi$ to $\phi+2k\pi$.\\
+We can apply the same procedure of stretching and bending for the $\psi$ dimension so that the planes $\Psi=0$ and $\Psi=2\pi$ join.
+We get $(c)$,  a torus-like object.\\
+The only dimension left is $\theta$ which our multi-dimensional crippled mind can't find a way to reshape this pseudo-torus so that when varying $\theta$ we can come back to the same point as started.
+$$\blacklozenge$$
+\newpage
+
 \section{p186 - Exercise 1}
 \begin{tcolorbox}
 If a vector at the point with coordinates $\left(1,1,1\right)$ in Euclidean $3$-space has components $\left(3,-1,2\right)$, find the contravariant, covariant and physical components in spherical polar coordinates.
@@ -468,7 +532,7 @@ In the first equation, put $y \equiv \dot{\phi}$ giving for the first equation:
 \begin{align}
 \frac{dy}{y}&=-2b \frac{\sin \theta d\theta} {\left(a-b\cos \theta \right)}  \\
 \Leftrightarrow\spatie\frac{dy}{y}&=-2 \frac{d\left(a-b\cos \theta \right)} {\left(a-b\cos \theta \right)}\\
-\Rightarrow \spatie \log y&=-2 C \log \left(a-b\cos \theta \right)\\
+\Rightarrow \spatie \log y&=-2 \log \left(a-b\cos \theta \right)+\log C^{}\\
 \Rightarrow \spatie \dot{\phi}&= C \left(a-b\cos \theta \right)^{-2}
 \end{align}
 Note that $\dot{\phi}$ is a time derivative. But as we are on a geodesic, $\mathbf{5.226.}$ stands and so $v$ is constant as $\dv{v}{s} =0$. Using $v = \dv{s}{t}$, (9) can be written as 
@@ -484,26 +548,5 @@ ds^2&=\left(a-b\cos \theta \right)^2 d{\phi}^2+b^2 d\theta^2\\
 \Rightarrow\spatie b^2 \left(\dv{\theta}{\phi}\right)^2 &= \left(\dv{\phi}{s}\right)^{-2 }- \left(a-b\cos \theta \right)^2 \\
 \left(12\right)\quad \text{: }\spatie b^2 \left(\dv{\theta}{\phi}\right)^2 &= \frac{\left(a-b\cos \theta \right)^4}{h^2}- \left(a-b\cos \theta \right)^2
 \end{align}
-$$\blacklozenge$$
-\newpage
-
-\section{p181 and p182 - Clarification Figures 13., 14. and 15.}
-\begin{tcolorbox}
-There are several ways to get a homeomorphism of the configuration space of a rigid body with fixed point.
-\end{tcolorbox}
-\begin{figure}[H]
-    \centering
-    \subfloat[]{\input{D:/MathLatex/images/fig_p181_13.tex}}
-	\
-    \subfloat[]{\input{D:/MathLatex/images/fig_p182_14.tex}}
-    \qquad
-    \subfloat[]{\input{D:/MathLatex/images/fig_p182_15.tex}}
-\caption{Homeomorphism of the configuration space of a rigid body with fixed point.}
-\label{fig:fig_p181}
-\end{figure}
-Consider figure $5.2 (a)$. We can stretch like an accordion the cuboid along the $\phi$ axis and bent it so that the planes $\phi=0$ and $\phi=2\pi$ join. We get $(b)$,  a torus with square sections. The dimension $\phi$ is dealt with as a point $P\left( \theta, \phi, \psi \right)$ in the configuration space  returns to the same point when varying $\phi$ to $\phi+2k\pi$.\\
-We can apply the same procedure of stretching and bending for the $\psi$ dimension so that the planes $\Psi=0$ and $\Psi=2\pi$ join.
-We get $(c)$,  a torus-like object.\\
-The only dimension left is $\theta$ which our multi-dimensional crippled mind can't find a way to reshape this pseudo-torus so that when varying $\theta$ we can come back to the same point as started.
 $$\blacklozenge$$
 \newpage
